<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:background="@color/background"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="top">

        <EditText
            android:id="@+id/textSearch"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_weight="100.0"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:textSize="22sp"
            android:background="@drawable/text_rounded_corner_menu"
            android:hint="@string/text"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/theme_name"
            android:layout_gravity="center"
            android:textColorHint="@color/theme_name"/>
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_rounded_corner_search"
            android:text="@string/add" />
    </LinearLayout>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:dividerHeight="4px"/>
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/empty"
        android:src="@drawable/unhappy"
        android:layout_width="150px"
        android:layout_marginTop="30dp"
        android:layout_height="150px"
        android:text="@string/no_records"/>
</LinearLayout>